Исправления после ревью

--- a/blocks/photo-card/__info/photo-card__info.css
+++ b/blocks/photo-card/__info/photo-card__info.css
@@ -1,4 +1,4 @@
-.photo-card__bottom-container {
+.photo-card__info {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
