--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -4,7 +4,7 @@
     right: -40px;
     width: 32px;
     height: 32px;
-    background-image: url(../../../images/close-button.png);
+    background-image: url(../../../images/close-button.svg);
     background-color: transparent;
     background-position: center;
     background-repeat: no-repeat;
