--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-    background-image: url(../../../images/add-button.png);
+    background-image: url(../../../images/add-button.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: rgba(0, 0, 0, 0);
@@ -18,5 +18,6 @@
 @media (max-width: 767px) {
     .profile__add-button {
         width: 100%;
+        background-size: 16px 16px;
     }
 }
