--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -5,10 +5,15 @@
     line-height: 22px;
     color: #FFFFFF;
     margin: 0;
+    text-overflow: ellipsis;
+    max-width: 336px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 @media (max-width: 767px) {
     .profile__description {
+        max-width: 288px;
         font-size: 14px;
         line-height: 17px;
     }
