--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,10 +5,15 @@
     line-height: 48px;
     color: #FFFFFF;
     margin: 0;
+    text-overflow: ellipsis;
+    max-width: 294px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 @media (max-width: 767px) {
     .profile__name {
+        max-width: 189px;
         font-size: 27px;
         line-height: 33px;
     }
