--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,8 @@
 .popup {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.1s, opacity 0.1s linear;
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
