--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 @import url(../blocks/photo-card/__info/photo-card__info.css);
 @import url(../blocks/photo-card/__title/photo-card__title.css);
 @import url(../blocks/photo-card/__like-button/photo-card__like-button.css);
+@import url(../blocks/photo-card/__like-button/_active/photo-card__like-button_active.css);
+@import url(../blocks/photo-card/__delete-button/photo-card__delete-button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
@@ -28,3 +30,7 @@
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__item/_element/popup__item_element_text.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/_form/popup_form_add.css);
+@import url(../blocks/popup/__container/_form/popup_container_form_photo.css);
+@import url(../blocks/formPhotoContainer/__caption/formPhotoContainer__caption.css);
+@import url(../blocks/formPhotoContainer/__image/formPhotoContainer__image.css);
