--- a/blocks/photo-card/__image/photo-card__image.css
+++ b/blocks/photo-card/__image/photo-card__image.css
@@ -1,7 +1,6 @@
 .photo-card__image {
     object-fit: cover;
     object-position: center;
-    width: 100%;
-    height: 282px;
+    aspect-ratio: 1 / 1;
     cursor: pointer;
 }
