--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -32,5 +32,8 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_form/popup_form_add.css);
 @import url(../blocks/popup/__container/_form/popup_container_form_photo.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__item/_type/popup__item_type_error.css);
+@import url(../blocks/popup/__submit/_status/popup__submit_status_disabled.css);
 @import url(../blocks/formPhotoContainer/__caption/formPhotoContainer__caption.css);
 @import url(../blocks/formPhotoContainer/__image/formPhotoContainer__image.css);
